--- a/src/components/admin/pages/styles/AdminDashboardPage.css
+++ b/src/components/admin/pages/styles/AdminDashboardPage.css
@@ -1,4 +1,47 @@
-/* AdminDashboardPage.css */
+
+.featured-icon {
+  color: gold; 
+  cursor: pointer; 
+  z-index: 1;
+
+
+}
+.star-icon {
+  position: absolute;
+  top: 10px; /* Adjust the top position as needed */
+  right: 10px; /* Adjust the right position as needed */
+  font-size: 24px; /* Adjust the size of the star icon */
+  cursor: pointer;
+  background-color: white; /* Set the background color to white */
+  border-radius: 50%; /* Ensure the background is circular */
+  padding: 5px; /* Adjust padding as needed */
+}
+
+
+.star-icon:hover {
+  background-color: lightgray; /* Change background color on hover */
+}
+
+
+.not-featured-icon {
+  color: #ccc; 
+  cursor: pointer;
+  z-index: 1;
+}
+
+.admin-dashboard-blog-card {
+  position: relative;
+}
+
+.star-icon {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  font-size: 24px;
+  cursor: pointer;
+}
+
+
 
 .admin-dashboard-card-container {
   display: flex;
