--- a/src/components/pages/profile/Style/PetTable.css
+++ b/src/components/pages/profile/Style/PetTable.css
@@ -36,8 +36,11 @@
   }
 
 .profile-pet-card-container {
+  /* display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px; */
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
 }
 
@@ -49,7 +52,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding: 20px;
+  padding: 0;
+  margin: 0;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   -webkit-transition: 0.5s;
