--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,7 @@ h1, h2, h3, h4, h5, h6 {
   --btnSuccess: #28a745;
   --btnDanger: #dc3545;
   --btnWarning: #ffc107;
+  --btnDefault: #4096ff;
 
   --btn1:#fa7705;
   --c1:#fffedd;
