--- a/src/components/Auth/Style/signup.css
+++ b/src/components/Auth/Style/signup.css
@@ -1,17 +1,112 @@
- .signup-main-container {
-    	min-height: 100vh;
-    background: url(../../../assets/img/wave5.png);
-	background-size: cover;
-    background-color: white;
-	background-position: center;
-	background-repeat: no-repeat;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    position: fixed;
-    z-index: 3;
-    /* padding:2rem 7%; */
- }
+#signup {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 3;
+  background-color: var(--bg-secondary);
+}
+
+#signup .container {
+  width: 1340px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+ 
+#signup .container .bar {
+  height: 4px;
+  width: 85px;
+  background: var(--barc);
+  margin: 20px auto 20px;
+  position: relative;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#signup .container .bar::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 5px;
+  background: #ffffff;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: MOVE-BG;
+          animation-name: MOVE-BG;
+}
+
+#signup .main-signup-container {
+  width: 1000px;
+  height: 620px;
+  display: flex;
+  border-radius: 8px;
+  background-color: var(--bg-primary);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#signup .signup-logo-container{
+  width: 50%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 8px 0px 0px 8px;
+  background-color: var(--secondary);
+}
+
+#signup .signup-logo-container img {
+  width: 300px;
+  height: auto;
+}
+
+#signup .signup-logo-container h1{
+  font-size: 50px;
+  padding: 0;
+  margin: 0;
+}
+
+#signup .main-user-signup-container {
+  width: 50%;
+  padding: 20px 40px 20px 40px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 0px 8px 8px 0px;
+  background-color: var(--bg-primary);
+}
+
+#signup .main-user-signup-container h2 {
+  font-size: 54px;
+  padding: 0;
+  margin: 20px 0px 0px 0px;
+}
+
+#signup .main-user-signup-container p{
+  align-self: center;
+  margin-bottom: 30px;
+}
+
+#signup .user-signup-box input {
+  border: none;
+  outline: none;
+  font-size: 1.1em;
+  width: 100%;
+  letter-spacing: 0.5px;
+  padding: 14px;
+  border-bottom: solid 3px var(--DB);
+}
+
 .user-signup-check-box {
   position: relative;
   padding-left: 30px;
@@ -26,29 +121,16 @@
   cursor: pointer;
 }
 
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 5px;
-}
-
-.user-signup-check-box.viewed input:disabled + .checkmark {
-  background-color: #ccc;
-  cursor: not-allowed;
-  /* make notes */  
-
-}
-
  .user-signup-form-control.rm {
   position: relative;
+  display: flex;
   margin-bottom: 20px;
 }
 
 .terms-link {
+  text-align: left;
+  padding: 0;
+  margin-top: 2px;
   font: 1em sans-serif;
   font-size: 15px;
   font-weight: bold;
@@ -69,17 +151,6 @@
   padding: 10px;
 }
 
-.title {
-  font-family: 'montserrat';
-  text-transform: uppercase;
-  font-size: 3rem;
-  font-weight: bold;
-  text-align: center;
-  letter-spacing: 1px;
-  color: #082342;
-  /* border: solid green; */
-}
-
 .signup-separator {
     width: 150px;
     height: 4px;
@@ -87,24 +158,7 @@
     margin: 24px auto 24px auto;
 }
 
-.main-user-signup-container {
-    margin-top: 50px;
-    padding: 24px;
-    width: 450px;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    
-    
- } 
-
  .user-signup-form-control {
-  font-family: 'Franklin Gothic light';
-  color: #082342;
     width: 100%;
     position: relative;
     margin-bottom: 20px;
@@ -116,6 +170,23 @@
         display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 5px;
+  }
+  
+  .user-signup-check-box.viewed input:disabled + .checkmark {
+    background-color: #ccc;
+    cursor: not-allowed;
+    /* make notes */  
+  
+  }  
 
   /* Hide the browser's default checkbox */
 .user-signup-check-box input {
@@ -143,7 +214,7 @@
   
   /* When the checkbox is checked, add a blue background */
   .user-signup-check-box  input:checked ~ .checkmark {
-    background-color: #082342;
+    background-color: var(--btnPrimary);
   }
   
   /* Create the checkmark/indicator (hidden when not checked) */
@@ -202,56 +273,21 @@
     /* display: none; */
   }
 
-  .user-signup-box .btn1 {
+  #signup .user-signup-box .btn1 {
     color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: bold;
-    background-image: linear-gradient(to right, #024ca1, #082342);
+    padding: 14px;
+    border: none;
+    border-radius: 100px;
     cursor: pointer;
     transition: opacity 0.4s;
+    background-color: var(--btnPrimary);
 }
 
 .user-signup-box .btn1:hover {
     opacity: 0.9;
-}
-
-.user-signup-box input,
-.user-signup-boxbutton {
-  font-family: 'Franklin Gothic light';
-  color: #082342;
-    border: none;
-    outline: none;
-    border-radius: 30px;
-    font-size: 1.1em;
-}
-
-.user-signup-box input {
-    text-align: center;
-    width: 100%;
-    background: #e6e6e6;
-    letter-spacing: 0.5px;
-    height: 6vh;
-    padding: 0px 10px 0px 10px;
-}
-
-.user-signup-box input ~ i {
-    position: absolute;
-    left: 32px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: white;
-    transition: color   0.4s;
-}
-
-.login-link {
-  font-family: "Franklin Gothic light";
-  text-align: center;
-  margin-top: 10px;
-}
-
-.user-signup-box input:focus ~ i {
-  color: #e12454;
 }
 
 @media screen and (max-width: 768px) {
